# mcp-explorer

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  config.py  docker-compose.yml  docker-run.sh  mcpConfig.json  mkdocs.yml  package-lock.json  pyproject.toml  setup.sh  toolsConfig.json
core/: agent.py  logger.py  mcp_loader.py  tool_loader.py
docs/: 404.html  architecture.html  architecture.md  components.html  configuration.html  examples.html  examples.md  index.html  session_history.html  session_history.md  setup.html  testing.html  walkthrough.html  walkthrough.md
docs-md/: components.md  configuration.md  index.md  session_history.md  setup.md  testing.md
docs/architecture/: index.html
docs/components/: index.html
docs/configuration/: index.html
docs/examples/: index.html
docs/search/: search_index.json
docs/session_history/: index.html
docs/setup/: index.html
docs/testing/: index.html
docs/walkthrough/: index.html
tests/: test_config.py  test_integration.py  test_tool_loader.py
tests/manual/js/: debug_chainlit.js  debug_chainlit_wiki.js  mcp_test.js  verify_puppeteer.js  verify_puppeteer_fix.js  verify_traces.js
tests/manual/python/: e2e_test.py  generate_trace.py  generate_trace_decorator.py  generate_trace_langchain.py  generate_trace_simple.py  parse_logs.py  test_logging.py  verify_api.py  verify_api2.py
ui/: app.py
