[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nike_explorer"
version = "0.1.0"
description = "MCP Query Agent"
dependencies = [
    "chainlit>=1.1.0",
    "langchain>=0.2.0",
    "langgraph",
    "langchain-community>=0.2.0",
    "langchain-ollama",
    "langchain-mcp-adapters",
    "python-dotenv>=1.0.1",
    "loguru>=0.7.2",
    "wikipedia",
    "arxiv<=2.1.3",
    "langfuse>=3.0.0"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "playwright"
]
